--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
   "prefer-stable": true,
   "require": {
     "craftcms/cms": "^5.0.0",
+    "mmikkel/cp-field-inspect": "2.0.4",
+    "verbb/cp-nav": "5.0.5",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
@@ -24,5 +26,12 @@
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
     ]
-  }
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://composer.craftcms.com",
+      "canonical": false
+    }
+  ]
 }
