Visie toegevoegd en de template gefixt ook een ckeditor toegevoegd voor makkelijk grote delen content toe te voegen

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
+    "craftcms/ckeditor": "4.9.0",
     "craftcms/cms": "^5.0.0",
     "mmikkel/cp-field-inspect": "2.0.4",
     "verbb/cp-nav": "5.0.5",
