--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1754923369
+dateModified: 1754996070
 email:
   fromEmail: witzevds@gmail.com
   fromName: 'Sint Coleta'
@@ -16,8 +16,10 @@ meta:
     0d452ea6-0567-4eba-8592-8634410ff783: Vacatures # Vacatures
     0e119e6d-c6ae-45ff-9585-a9041b892638: 'Site Instellingen' # Site Instellingen
     0f91a800-a625-4178-946b-af5999e61eb2: 'Icons ' # Icons 
+    1dd476be-3970-46ab-b357-210d3bb2f245: Visie # Visie
     1f2afb75-6a53-471d-877e-4a42c92b3dcb: Publicaties # Publicaties
     2d6ae19c-b9df-4bed-b399-cb507e9716c9: 'Publicatie Datum' # Publicatie Datum
+    3a7559f6-57b6-4db7-b9ee-290137e78111: 'Visie Inhoud' # Visie Inhoud
     3d13f122-2913-44eb-a64a-bac4901ababc: Dienst # Dienst
     3dee15d5-6575-49ec-b1ee-f82825f048ec: 'Ouderen Zorg' # Ouderen Zorg
     4a37755c-9a1f-4b16-bd6a-74e66730a69e: 'Informatieve Pagina' # Informatieve Pagina
@@ -49,9 +51,12 @@ meta:
     89276b58-e746-4865-9457-e4f9032bb98c: 'Site Logos' # Site Logos
     91215abf-fe9c-4aa7-a1c8-ed37cb28a365: Favicons # Favicons
     27552098-5a51-46ac-a335-79f37ed1a638: Dienst # Dienst
+    28329803-f84b-430a-a39d-a662c4cf2ec2: Simple # Simple
     34833753-e669-4115-b7c0-a267585cb788: 'Soorten Zorg' # Soorten Zorg
     79688786-8ab6-4c03-814f-9fb4dbdf1524: 'Hero images' # Hero images
     a4ea1933-a774-4a96-ab30-f349fa306002: Home # Home
+    a283a7f9-9cff-4714-a573-af42f5ecdfa2: 'Korte Beschrijving Visie' # Korte Beschrijving Visie
+    adb59983-1f59-4105-9b31-ab9ddcb2bf92: 'Volledige Text van de pagina' # Volledige Text van de pagina
     aece8eaf-ca86-46e5-93cf-58b02d47b2fc: 'Content Images' # Content Images
     b0fe89d3-67e4-4466-b6d6-41498b6b53e4: 'korte beschrijving Publicatie' # korte beschrijving Publicatie
     b3bd65ce-7cba-4e7e-9032-91f8bab3feda: PDF-Bestand # PDF-Bestand
@@ -80,6 +85,10 @@ meta:
     fb5dbd1b-702f-4939-a225-896b4cfd118e: Forms # Forms
     fe95ca45-6a84-49d5-80fc-ca7a9769aee4: Favicons # Favicons
 plugins:
+  ckeditor:
+    edition: standard
+    enabled: true
+    schemaVersion: 3.0.0.0
   cp-nav:
     edition: standard
     enabled: true
