--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "craftcms/ckeditor": "4.9.0",
-    "craftcms/cms": "^5.0.0",
+    "craftcms/ckeditor": "4.10.0",
+    "craftcms/cms": "5.8.15",
     "craftcms/contact-form": "3.1.0",
     "mmikkel/cp-field-inspect": "2.0.4",
     "verbb/cp-nav": "5.0.5",
