Refactor code structure for improved readability and maintainability

--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1755246556
+dateModified: 1755247568
 email:
   fromEmail: witzevds@gmail.com
   fromName: 'Sint Coleta'
@@ -60,6 +60,7 @@ meta:
     34833753-e669-4115-b7c0-a267585cb788: 'Soorten Zorg' # Soorten Zorg
     79688786-8ab6-4c03-814f-9fb4dbdf1524: 'Hero images' # Hero images
     a4ea1933-a774-4a96-ab30-f349fa306002: Home # Home
+    a9b97cdc-aecb-4286-a3fb-ce9c14630da0: 'Hero Home Afbeelding' # Hero Home Afbeelding
     a283a7f9-9cff-4714-a573-af42f5ecdfa2: 'Korte Beschrijving Visie' # Korte Beschrijving Visie
     adb59983-1f59-4105-9b31-ab9ddcb2bf92: 'Volledige Text van de pagina' # Volledige Text van de pagina
     aece8eaf-ca86-46e5-93cf-58b02d47b2fc: 'Content Images' # Content Images
