--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1755540749
+dateModified: 1755619529
 email:
   fromEmail: witzevds@gmail.com
   fromName: 'Sint Coleta'
@@ -21,10 +21,10 @@ meta:
     1f2afb75-6a53-471d-877e-4a42c92b3dcb: Publicaties # Publicaties
     2d6ae19c-b9df-4bed-b399-cb507e9716c9: 'Publicatie Datum' # Publicatie Datum
     2f599061-ad20-4af8-ab83-baa279f61f79: Opdrachtsverklaring # Opdrachtsverklaring
+    3a3688c2-f7a8-40e1-ae7e-b46dc810e2ae: Projecten # Projecten
     3a7559f6-57b6-4db7-b9ee-290137e78111: 'Visie Inhoud' # Visie Inhoud
     3d13f122-2913-44eb-a64a-bac4901ababc: Dienst # Dienst
     3dee15d5-6575-49ec-b1ee-f82825f048ec: 'Ouderen Zorg' # Ouderen Zorg
-    4a37755c-9a1f-4b16-bd6a-74e66730a69e: 'Informatieve Pagina' # Informatieve Pagina
     5b65c935-aea6-4e62-8daf-0ffd730b89d8: 'Afbeelding Extra Paginas' # Afbeelding Extra Paginas
     5c6b1017-557e-48c6-8e02-c649452f5578: 'Korte Uitleg Diensten' # Korte Uitleg Diensten
     6f02beaa-17a0-4a9c-a32d-fbe673c00b5e: Default # Default
@@ -45,6 +45,7 @@ meta:
     90ddb4bc-c04f-427c-a2cd-d2087eef1ad1: Dienstverlening # Dienstverlening
     97a473e1-4261-4239-b327-48b29cec72c7: IntroTekst # IntroTekst
     229f8e16-fb60-46ea-89a6-974570a818bf: 'Site Logo' # Site Logo
+    438e2ad8-8996-4c38-b800-36d0836f06b6: 'Project Logo' # Project Logo
     502d3bf4-d073-4479-8044-26cda62a61f1: 'Werknemers categorieën' # Werknemers categorieën
     714facc8-1acc-410a-ae6b-e51ffef246d1: E-mailadres # E-mailadres
     748ec133-c20c-4ae0-ab56-748a06d207f4: 'E-mailadres Contact Pagina' # E-mailadres Contact Pagina
@@ -57,7 +58,6 @@ meta:
     91215abf-fe9c-4aa7-a1c8-ed37cb28a365: Favicons # Favicons
     27552098-5a51-46ac-a335-79f37ed1a638: Dienst # Dienst
     28329803-f84b-430a-a39d-a662c4cf2ec2: Simple # Simple
-    34833753-e669-4115-b7c0-a267585cb788: 'Soorten Zorg' # Soorten Zorg
     79688786-8ab6-4c03-814f-9fb4dbdf1524: 'Hero images' # Hero images
     a4ea1933-a774-4a96-ab30-f349fa306002: Home # Home
     a9b97cdc-aecb-4286-a3fb-ce9c14630da0: 'Hero Home Afbeelding' # Hero Home Afbeelding
@@ -71,9 +71,12 @@ meta:
     b48664c1-0875-4182-b95a-6f06a9b76311: 'Openingsuren Contact Pagina' # Openingsuren Contact Pagina
     b873181b-19da-40b0-8224-de69fb273175: 'Informatieve Pagina' # Informatieve Pagina
     ba4b863f-a47d-47e3-8bf1-60624e6fcee6: 'Hero Home Sub Title' # Hero Home Sub Title
+    bd1f9264-1ce4-4c60-a579-4e57ada41125: Projecten # Projecten
     bf2acec6-c1bd-4ccb-9343-f00aabd21868: 'Inhoud Extra Paginas' # Inhoud Extra Paginas
     c4bd26f8-9b88-42e9-af8d-3d8069110533: 'Publicatie Type' # Publicatie Type
     c54651e8-c41e-43e4-abac-4fe49424d135: Homepage # Homepage
+    cb0c8e02-cbeb-4ecb-8c59-6992969d7991: 'Volledige uitleg dienst' # Volledige uitleg dienst
+    cb6a08e3-c0d3-4915-b329-c8c612b61289: 'Project Korte Uitleg' # Project Korte Uitleg
     cd11f59a-8fea-4354-8412-9e9e3bbd5044: Naam # Naam
     d1df8b1e-5f4a-4e3c-b535-615a3372a2a2: Functie # Functie
     d12a1b7e-9581-4a7e-9c13-4093428236b4: 'Publicatie Types' # Publicatie Types
@@ -89,6 +92,7 @@ meta:
     f2fed34e-1d92-4465-9eb6-ea62c64999c9: 'Afbeelding dienst' # Afbeelding dienst
     f8f7d6ca-55f6-4dec-b0ff-51d5202f105a: 'Adres Contact Pagina' # Adres Contact Pagina
     f9c980ce-ffb1-492b-8828-a605e53046be: 'Volledige Omschrijving Vacature' # Volledige Omschrijving Vacature
+    f409a2ce-b0be-4686-b8ed-1e6c75b246f4: 'Project Uitleg' # Project Uitleg
     f344656f-f92a-4a7f-b55f-74800de51ab5: 'Price List' # Price List
     fb5dbd1b-702f-4939-a225-896b4cfd118e: Forms # Forms
     fc3b457a-4f30-4026-bdab-ce0e7ae3ed8e: Hoofdnavigatie # Hoofdnavigatie
